--- a/KarmaTests/KarmaTests.csproj
+++ b/KarmaTests/KarmaTests.csproj
@@ -50,7 +50,9 @@
   <ItemGroup>
     <Compile Include="SerializationAndDeserialization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestTargets\IAssertable.cs" />
     <Compile Include="TestTargets\TargetClass.cs" />
+    <Compile Include="TestTargets\TargetClassWithoutEmptyConstructor.cs" />
     <Compile Include="TestTargets\TargetStruct.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
